use anystretch for issue header

--- a/app/assets/stylesheets/sections/issues.css.scss
+++ b/app/assets/stylesheets/sections/issues.css.scss
@@ -1,34 +1,6 @@
 @import "globals/variables";
 @import "globals/mixins";
 
-#issue-header {
-  background: url('/assets/issues.jpg') no-repeat 0 50%;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: 100%;
-  background-color: #020C11;
-  min-height: 200px;
-  padding: 0;
-  h1 {
-    padding-top: 50px;
-  }
-}
-#issue-header:before {
-content: "";
-display: block;
-position: absolute;
-height: 200px;
-top: 43px;
-left: 0;
-right: 0;
-background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(90, 85, 78, 0.6)), color-stop(20%, rgba(100, 94, 85, 0.6)), color-stop(100%, rgba(255, 43, 39, 0.7)));
-background: -webkit-linear-gradient(rgba(90, 85, 78, 0.6) 0%,rgba(100, 94, 85, 0.6) 20%,rgba(36, 43, 39, 0.7) 100%);
-background: -moz-linear-gradient(rgba(90, 85, 78, 0.6) 0%,rgba(100, 94, 85, 0.6) 20%,rgba(36, 43, 39, 0.7) 100%);
-background: -o-linear-gradient(rgba(90, 85, 78, 0.6) 0%,rgba(100, 94, 85, 0.6) 20%,rgba(36, 43, 39, 0.7) 100%);
-background: linear-gradient(rgba(90, 85, 78, 0.6) 0%,rgba(100, 94, 85, 0.6) 20%,rgba(36, 43, 39, 0.7) 100%);
-}
-
 .new-issue {
   margin-top: 40px;
 }
